--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
         .screenshot-placeholder {
             width: 100%;
             max-width: 600px;
-            height: 400px;
             margin: 0 auto;
             background: #fff;
             border-radius: 16px;
@@ -186,8 +185,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 80px;
+            overflow: hidden;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+        }
+
+        .screenshot-placeholder img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         footer {
@@ -228,6 +233,10 @@
             .screenshot-placeholder {
                 height: 300px;
             }
+
+            .screenshot-placeholder img {
+                object-fit: contain;
+            }
         }
     </style>
 </head>
@@ -249,7 +258,7 @@
             <div class="download-section">
                 <h2 class="download-title">Téléchargement gratuit</h2>
                 <div class="download-buttons">
-                    <a href="#" class="download-btn mac">
+                    <a href="#" class="download-btn windows">
                         <span>⌘</span>
                         <span>Mac</span>
                     </a>
@@ -261,7 +270,7 @@
             </div>
 
             <div class="screenshot-section">
-                <div class="screenshot-placeholder">⏳</div>
+                <div class="screenshot-placeholder"><img src="focimg.png" alt=""></div>
             </div>
 
             <div class="features">
