--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro App - Minuteur minimaliste</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+      rel="stylesheet"
+    />
     <style>
         * {
             margin: 0;
@@ -12,7 +16,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: "JetBrains Mono", monospace, sans-serif;
             line-height: 1.6;
             color: #1a1a1a;
             background: #f5f5f5;
@@ -293,7 +297,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2025 Pomodoro. Tous droits réservés.</p>
+            <p>&copy; 2025 Focusy. Tous droits réservés. Latif.codes</p>
         </footer>
     </div>
 </body>
