added mac download

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="download-section">
                 <h2 class="download-title">Téléchargement gratuit</h2>
                 <div class="download-buttons">
-                    <a href="#" class="download-btn windows">
+                    <a href="https://github.com/latifcodess/Focusy/releases/latest/download/Focusy_1.0.0_aarch64.dmg" class="download-btn windows">
                         <span>⌘</span>
                         <span>Mac</span>
                     </a>
