--- a/index.html
+++ b/index.html
@@ -310,10 +310,13 @@
         if (isMac) {
             document.getElementById("mac-download").style.display = "inline-flex";
             document.getElementById("mac-instructions").style.display = "block";
+            document.getElementById("windows-download").style.display = "none";
         }
 
         if (isWindows) {
             document.getElementById("windows-download").style.display = "inline-flex";
+            document.getElementById("mac-download").style.display = "none";
+            document.getElementById("mac-instructions").style.display = "none";
         }
 
         if (!isMac && !isWindows) {
